fix: replaced github-api client with a simple Quarkus REST client to support building a native executable