@@ -77,9 +77,10 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                    <configuration>
-                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
-                    </configuration>
+<!--                    <configuration>-->
+<!--                        <jvm>${env.GRAALVM_HOME}/bin/java</jvm>-->
+<!--                        <argLine>-agentlib:native-image-agent=experimental-class-loader-support,config-output-dir=${project.build.directory}/native-image-config</argLine>-->
+<!--                    </configuration>-->
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
